--- a/index.html
+++ b/index.html
@@ -5,9 +5,100 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
-    <title>Document</title>
+    <title>Assignments Two</title>
 </head>
 <body>
-    
+
+    <header>
+        <nav class="nav-item">
+            <h4>G3 Architects</h4>
+            <ul>
+                <li><a href="">Home</a></li>
+                <li><a href="">About</a></li>
+                <li><a href="">Contact Us</a></li>
+                <li><a href="">Login</a></li>
+            </ul>
+        </nav>
+        <div class="header-text">
+            <h1>Brand New <br>Group of Architects </h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in <br>some form, by injected humour, or randomised words which don't look even</p>
+            <button>Explore More</button>
+            
+        </div>
+            <img src="images/banner.png" alt="banner">
+    </header>
+    <section class="first-section">
+        <div class="first-sec-image">
+            <div class="images"><img src="images/team1.png" alt="team1"></div>
+            <div class="images"><img src="images/team2.png" alt="team2"></div>
+            <div class="images"><img src="images/team3.png" alt="team3"></div>
+            <div class="images"><img src="images/team4.png" alt="team4"></div>
+        </div>
+        <div class="first-sec-text">
+            <h2 class="sh-text"> <span class="span-one">Quick list</span> <Span class="span-two">of Our</Span> <br><span class="span-three">Features</span></h2>
+            <p class="sp-text">There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration in some form, by injected<br> humour, or randomised words which don't look even</p>
+            <button class="sb-btn">Explore More</button>
+        </div>
+    </section>
+
+    <section class="features-section">
+        <div class="text-side">
+            <h1 class="ladi">Features you will <br>love & enjoy</h1>
+            <p class="right-p">There are many variations of passages of Lorem Ipsum available, but the<br> majority have suffered alteration in some form, by injected humour, or<br> randomised words which don't look even</p>
+            <div class="text-side-box">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration in some form, by<br>injected humour, or randomised...........</p>
+            </div>
+
+            <div class="text-side-box">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration in some form, by<br>injected humour, or randomised...........</p>
+            </div>
+
+            <div class="text-side-box">
+                <h4>Dexktop & Mobile Version</h4>
+                <p>There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration in some form, by<br>injected humour, or randomised...........</p>
+            </div>
+        </div>
+        <div class="image-side">
+            <img src="images/architect.png" alt="architect">
+            <button class="image-btn">
+                <h2>10+Year</h2>
+                <p>Experience</p>
+            </button>
+        </div>
+    </section>
+
+    <section class="some-facts">
+        <div class="main-text">
+            <h1>Some Facts</h1>
+            <p>There are many variations of passages of Lorem Ipsum available, but<br> the majority have suffered alteration.</p>
+        </div>
+        <div class="icon-box">
+            <div class="fact-icon-box">
+                <img class="box-image" src="images/icons/ribon.png" alt="ribon">
+                <h4>54</h4>
+                <p>Awards Winnings</p>
+            </div>
+
+            <div class="fact-icon-box">
+                <img class="box-image" src="images/icons/ribon.png" alt="ribon">
+                <h4>54</h4>
+                <p>Awards Winnings</p>
+            </div>
+
+            <div class="fact-icon-box">
+                <img class="box-image" src="images/icons/ribon.png" alt="ribon">
+                <h4>54</h4>
+                <p>Awards Winnings</p>
+            </div>
+
+            <div class="fact-icon-box">
+                <img class="box-image" src="images/icons/ribon.png" alt="ribon">
+                <h4>54</h4>
+                <p>Awards Winnings</p>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
