--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
 
     <section class="features-section">
         <div class="text-side">
-            <h1 class="ladi">Features you will <br>love & enjoy</h1>
+            <h1 class="text-hone">Features you will <br>love & enjoy</h1>
             <p class="right-p">There are many variations of passages of Lorem Ipsum available, but the<br> majority have suffered alteration in some form, by injected humour, or<br> randomised words which don't look even</p>
             <div class="text-side-box">
                 <h4>Dexktop & Mobile Version</h4>
@@ -51,12 +51,12 @@
             </div>
 
             <div class="text-side-box">
-                <h4>Dexktop & Mobile Version</h4>
+                <h4>Drag & Drop Builder</h4>
                 <p>There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration in some form, by<br>injected humour, or randomised...........</p>
             </div>
 
             <div class="text-side-box">
-                <h4>Dexktop & Mobile Version</h4>
+                <h4>Awesome Modern Design</h4>
                 <p>There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration in some form, by<br>injected humour, or randomised...........</p>
             </div>
         </div>
@@ -82,23 +82,40 @@
             </div>
 
             <div class="fact-icon-box">
-                <img class="box-image" src="images/icons/ribon.png" alt="ribon">
-                <h4>54</h4>
-                <p>Awards Winnings</p>
+                <img class="box-image" src="images/icons/projects.png" alt="projects">
+                <h4>1458</h4>
+                <p>Projects Finished</p>
             </div>
 
             <div class="fact-icon-box">
-                <img class="box-image" src="images/icons/ribon.png" alt="ribon">
-                <h4>54</h4>
-                <p>Awards Winnings</p>
+                <img class="box-image" src="images/icons/customers.png" alt="customers">
+                <h4>590</h4>
+                <p>Clients Worked</p>
             </div>
 
             <div class="fact-icon-box">
-                <img class="box-image" src="images/icons/ribon.png" alt="ribon">
-                <h4>54</h4>
-                <p>Awards Winnings</p>
+                <img class="box-image" src="images/icons/email.png" alt="email">
+                <h4>22578</h4>
+                <p>Email Send</p>
             </div>
         </div>
     </section>
+    <!-- sponsor section start -->
+    <section class="our-sponsor-section">
+        <h1>Our Sponsors</h1>
+        <p>There are many variations of passages of Lorem Ipsum available,<br> but the majority have suffered alteration.</p>
+        <div class="sponsor">
+            <div><img class="logos" src="images/sponsors/spotify.png" alt="spotify"></div>
+            <div><img class="logos" src="images/sponsors/amazon.png" alt="amazon"></div>
+            <div><img class="logos" src="images/sponsors/google.png" alt="google"></div>
+            <div><img class="logos" src="images/sponsors/telerama.png" alt="telerama"></div>
+            <div><img class="logos" src="images/sponsors/figma.png" alt="google"></div>
+        </div>
+    </section>
+    <!-- footer start -->
+
+    <footer>
+        <p>All rights reserved copyright@2023 startup landing page design</p>
+    </footer>
 </body>
 </html>
