--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <title>Assignments Two</title>
 </head>
 <body>
-
+    <!-- header start -->
     <header>
         <nav class="nav-item">
             <h4>G3 Architects</h4>
@@ -27,6 +27,7 @@
         </div>
             <img src="images/banner.png" alt="banner">
     </header>
+    <!-- first section start -->
     <section class="first-section">
         <div class="first-sec-image">
             <div class="images"><img src="images/team1.png" alt="team1"></div>
@@ -40,7 +41,7 @@
             <button class="sb-btn">Explore More</button>
         </div>
     </section>
-
+    <!-- feature section start -->
     <section class="features-section">
         <div class="text-side">
             <h1 class="text-hone">Features you will <br>love & enjoy</h1>
@@ -68,7 +69,7 @@
             </button>
         </div>
     </section>
-
+    <!-- some facts section start -->
     <section class="some-facts">
         <div class="main-text">
             <h1>Some Facts</h1>
